# cn-credentials-standard/demo/java-api/src/main/java/io/unlockit/application/credential/dto/IssuanceFactoryResponse.java
@@ -1,0 +1,3 @@
+package io.unlockit.application.credential.dto;
+
+public record IssuanceFactoryResponse(String contractId, String issuer) {}
