# cn-credentials-standard/demo/java-api/src/main/java/io/unlockit/domain/credential/exception/CredentialRegistryNotFoundException.java
@@ -1,0 +1,7 @@
+package io.unlockit.domain.credential.exception;
+
+public final class CredentialRegistryNotFoundException extends RuntimeException {
+  public CredentialRegistryNotFoundException(String registryId) {
+    super("credential registry not found");
+  }
+}
