# cn-credentials-standard/demo/java-api/src/main/java/io/unlockit/domain/credential/model/CredentialRegistryFactory.java
@@ -1,0 +1,4 @@
+package io.unlockit.domain.credential.model;
+
+public record CredentialRegistryFactory(
+    String contractId, String registryAdmin, String issuer) {}
