# cn-credentials-standard/demo/java-api/src/main/java/io/unlockit/domain/credential/query/CredentialQueryClient.java
@@ -1,6 +1,7 @@
 package io.unlockit.domain.credential.query;
 
 import io.unlockit.domain.credential.model.Credential;
+import io.unlockit.domain.credential.model.CredentialRegistryFactory;
 import io.unlockit.domain.credential.model.RegisteredCredential;
 import java.util.List;
 
@@ -12,6 +13,10 @@ public interface CredentialQueryClient {
   List<RegisteredCredential> findRegisteredCredentialById(String credentialId);
 
   List<RegisteredCredential> findRegisteredCredentialPage(long offset, int limit);
+
+  List<String> findCredentialRegistryIds(long offset, int limit);
+
+  List<CredentialRegistryFactory> findCredentialRegistryFactories(String registryId);
 
   void checkCredentialProjections();
 }
